--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,35 @@ body {
 }
 header {
   height: 11.73333vw;
-  background-color: cyan;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 4.8vw 0 3.06667vw;
+}
+header .icon-bilibili {
+  font-size: 7.73333vw;
+  color: #fb7299;
+}
+header .icon-search {
+  height: 5.06667vw;
+  width: 5.06667vw;
+  color: #ccc;
+}
+header > div {
+  display: flex;
+  align-items: center;
 }
 nav {
   height: 10.66667vw;
   background-color: pink;
+}
+.btn-login {
+  height: 6.4vw;
+  width: 6.4vw;
+  margin-left: 5.33333vw;
+}
+.btn-app {
+  height: 6.26667vw;
+  width: 19.06667vw;
+  margin-left: 5.33333vw;
 }
