--- a/css/index.css
+++ b/css/index.css
@@ -45,3 +45,46 @@ nav {
 nav .active {
   color: #fb7299;
 }
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 2.66667vw;
+  justify-content: space-between;
+}
+.list .item {
+  width: 46vw;
+  font-size: 3.2vw;
+  position: relative;
+}
+.list .item img {
+  width: 100%;
+  height: 25.86667vw;
+  border-radius: 0.53333vw;
+  display: block;
+}
+.list .item .title {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  margin: 2.4vw 0 2.4vw;
+}
+.list .item .count-box {
+  height: 5.33333vw;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), #000);
+  color: white;
+  position: absolute;
+  top: 20.53333vw;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1.73333vw;
+  box-sizing: border-box;
+}
+.list .item .count-box > span {
+  display: flex;
+  align-items: flex-start;
+}
+.list .item .count-box > span .iconfont {
+  margin-right: 1.73333vw;
+}
