--- a/css/index.less
+++ b/css/index.less
@@ -50,3 +50,54 @@ nav {
         color: #fb7299;
     }
 }
+
+.list {
+    display: flex;
+    // 允许换行
+    flex-wrap: wrap;
+    padding: 0 2.66667vw;
+    // 两端贴边对齐
+    justify-content: space-between;
+    .item {
+        width: 46vw;
+        font-size: 3.2vw;
+        position: relative;
+        img {
+            // 相对父元素
+            width: 100%;
+            height: 25.86667vw;
+            border-radius: 0.53333vw;
+            display: block;
+        }
+        .title {
+            display: -webkit-box;
+            // 溢出隐藏
+            overflow: hidden;
+            -webkit-box-orient: vertical;
+            // 显示两行
+            -webkit-line-clamp: 2;
+            margin: 2.4vw 0 2.4vw;
+        }
+        .count-box {
+            height: 5.33333vw;
+            width: 100%;
+            // 线性渐变
+            background: linear-gradient(rgba(0,0,0,0),#000);
+            color: white;
+            position: absolute;
+            top: 20.53333vw;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 1.73333vw;
+            // 盒子宽度
+            box-sizing: border-box;
+            > span {
+                display: flex;
+                align-items: flex-start;
+                .iconfont {
+                    margin-right: 1.73333vw;
+                }
+            }
+        }
+    }
+}
