--- a/css/index.less
+++ b/css/index.less
@@ -101,3 +101,10 @@ nav {
         }
     }
 }
+
+footer {
+    font-size: 3.73333vw;
+    color: #999;
+    margin: 5.33333vw 0;
+    text-align: center;
+}
