--- a/css/index.less
+++ b/css/index.less
@@ -108,3 +108,12 @@ footer {
     margin: 5.33333vw 0;
     text-align: center;
 }
+
+.fixed-top {
+    // 吸顶效果
+    position: sticky;
+    // 距离顶部的位置
+    top: 0;
+    z-index: 9;
+    background-color: white;
+}
